--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^7.1.1
+  country_code_picker: ^1.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
